<resources>
    <string name="app_name">Frizer</string>
    <string name="prijava">Prijava</string>
    <string name="saloniUBlizini">Traži u blizini</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="login">Ulogiravanje</string>
    <string name="registr">Registriraj se</string>
    <string name="btOpen">Otvori</string>
    <string name="name">Ime</string>
    <string name="username">Korisničko ime</string>
    <string name="password">Lozinka</string>
    <string name="surname">Prezime</string>
    <string name="contactNumber">Kontakt broj</string>
    <string name="userNameTaken">Željeno korisničko ime već je zauzeto. Pokušajte s nekim drugim.</string>
    <string name="passwordShort">Lozinka mora imati barem 8 znakova!</string>
    <string name="telNumTaken">Postoji korisnik s ovim brojem mobitela!</string>
    <string name="loginFailed">Neuspješna prijava! Provjerite korisničko ime i lozinku.</string>
    <string name="logout">Odjavi se</string>
    <string name="hello">Pozdrav</string>
    <string name="confirmPassword">Potvrda lozinke</string>
    <string name="confirmPasswordFalse">Potvrda lozinke razlikuje se od unesene lozine.</string>
    <string name="title_activity_maps">Map</string>
    <string name="radnoVrijeme">Radno Vrijeme:</string>
    <string name="radniDani">Ponedjeljak - subota</string>
    <string name="btnNarucitiSe">Naruci se!</string>
    <string name="btnPonudaTxt">Ponuda</string>
    <string name="btnCommentText">Komentiraj</string>
    <string name="turnGPSon">Ne mogu dohvatiti lokaciju! Uključite GPS.</string>
    <string name="noCurrentLocation">Trenutno ne mogu dohvatiti lokaciju. Pokušajte ponovo.</string>
    <string name="noSalonsNearBy">Svi su prijavljeni saloni više od 5 km udaljeni.</string>
    <string name="usluge">Usluge</string>
    <string name="crCijena">Cijena:</string>
    <string name="crTrajanje">Trajanje:</string>
    <string name="narudzbaDatum">Datum</string>
    <string name="narudzbaVrijeme">Vrijeme</string>
    <string name="btnNaruciSe">Naruci se!</string>
    <string name="logSalon">Prijavi se kao salon</string>
    <string name="narudzbe">Narudžbe</string>
    <string name="vrijemeNarudzbe">Vrijeme:</string>
    <string name="uslugaNarudzbe">Usluga:</string>
    <string name="telNumEmpty">Unesite broj mobitela!</string>
    <string name="userNameEmpty">Unesite korisničko ime!</string>
    <string name="nameEmpty">Unesite svoje ime!</string>
    <string name="surnameEmpty">Unesite svoje prezime!</string>
    <string name="komentari">Komentari</string>
    <string name="btnKomentiranjeLog">Prvo se prijavi!</string>
    <string name="uspjesnoNarucivanje">Vasa narudžba je poslana!</string>
    <string name="neuspjesnoNarucivanje">Prvo se prijavite!</string>
</resources>
