<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="hr.math.frizer.NarudzbaActivity">


    <EditText
        android:id="@+id/etDatum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/narudzbaDatum"
        android:inputType="date" />

    <EditText
        android:id="@+id/etVrijeme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/narudzbaVrijeme"
        android:inputType="time" />
    <EditText
        android:id="@+id/etUsluga"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/btnNaruciSe"
        />

    <Button
        android:id="@+id/btnNaruci"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Naruci se!"
        android:onClick="NaruciSe"/>

</LinearLayout>
