<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="hr.math.frizer.SalonActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvSalonName"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="Frizerski Salon W"
                android:textSize="24sp" />

            <RatingBar
                android:id="@+id/rtStars"
                style="@android:style/Widget.DeviceDefault.Light.RatingBar"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:numStars="5"
                android:stepSize="0.1" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/txtAdresaSalon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Taborska 25, Zagreb" />

        <TextView
            android:id="@+id/txtTelNumberSalon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="0918907770" />

        <TextView
            android:id="@+id/txtMailSalon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="frizerskisalonw@gmail.com" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radnoVrijeme" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radniDani" />

        <TextView
            android:id="@+id/txtWorkhoursSalon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="8-20" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="41dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnOrderSalon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btnNarucitiSe"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="14sp" />

            <Button
                android:id="@+id/btnPonuda"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btnPonudaTxt"
                android:textAppearance="@style/TextAppearance.AppCompat" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <TextView
            android:id="@+id/txtKomentari"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Komentari(50)" />

        <EditText
            android:id="@+id/etComment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/btnComment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnCommentText" />

        <ListView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/listViewSalon">

        </ListView>




    </LinearLayout>
</ScrollView>